--- a/srt/package.json
+++ b/srt/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "youtube-search-without-api-key": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
