--- a/srt/package.json
+++ b/srt/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "youtube-search-without-api-key": "^2.0.1"
   },
   "devDependencies": {
