--- a/srt/package.json
+++ b/srt/package.json
@@ -12,7 +12,8 @@
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "youtube-search-without-api-key": "^2.0.1"
+    "swr": "^2.2.5",
+    "youtube-sr": "^4.3.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
