--- a/srt/package.json
+++ b/srt/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.5.0",
     "next": "^14.1.3",
+    "next-auth": "^4.24.7",
+    "next.js": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.5",
