--- a/srt/package.json
+++ b/srt/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.5",
+    "youtube-mp3-converter": "^1.0.3",
     "youtube-sr": "^4.3.10"
   },
   "devDependencies": {
