--- a/srt/package.json
+++ b/srt/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "framer-motion": "^11.0.20",
     "mongodb": "^6.5.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
