--- a/srt/package.json
+++ b/srt/package.json
@@ -17,6 +17,7 @@
     "next.js": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-push-notification": "^1.5.4",
     "swr": "^2.2.5",
     "youtube-mp3-converter": "^1.0.3",
     "youtube-sr": "^4.3.10",
