--- a/srt/package.json
+++ b/srt/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.15.0",
     "@nextui-org/react": "^2.2.10",
     "@vercel/speed-insights": "^1.0.10",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.0.20",
     "mongodb": "^6.5.0",
     "next": "^14.1.3",
@@ -22,7 +25,8 @@
     "swr": "^2.2.5",
     "youtube-mp3-converter": "^1.0.3",
     "youtube-sr": "^4.3.10",
-    "yt-get": "^1.1.2"
+    "yt-get": "^1.1.2",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
